I added a JS loop

--- a/styles.css
+++ b/styles.css
@@ -47,3 +47,7 @@ li a:hover {
   color: white;
   font-family: 'PT Sans', sans-serif;
 }
+#loop {
+  color: white;
+  font-family: 'PT Sans', sans-serif;
+}
